force-app/main/default/objects/Case/fields/AI_Level__c.field-meta.xml
<CustomField>
    <fullName>AI_Level__c</fullName>
    <label>AI Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>