force-app/main/default/objects/Case/fields/P_Level__c.field-meta.xml
<CustomField>
    <fullName>P_Level__c</fullName>
    <label>P Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>