force-app/main/default/objects/Case/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <label>Support Level</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>